--- a/Pages/Ads/Create.cshtml
+++ b/Pages/Ads/Create.cshtml
@@ -10,9 +10,9 @@
 
 <div class="container-fluid">
     <div class="container">
-        <h1>@Localizer["Create"]</h1>
+        <h1>@Localizer["Создать"]</h1>
 
-        <h4>@Localizer["Ads"]</h4>
+        <h4>@Localizer["Объявления"]</h4>
         <hr />
         <div class="row">
             <div class="col">
@@ -51,7 +51,7 @@
                 </div>
 
                 <div>
-                    <a asp-page="Index">@Localizer["Back to List"]</a>
+                    <a asp-page="Index">@Localizer["Вернуться к списку"]</a>
                 </div>
             </div>
         </div>
