--- a/Pages/Ads/Details.cshtml
+++ b/Pages/Ads/Details.cshtml
@@ -10,8 +10,8 @@
 
 <div class="container-fluid">
     <div class="container">
-        <h1>@Localizer["Details"]</h1>
-        <h4>@Localizer["Ads"]</h4>
+        <h1>@Localizer["Подробности"]</h1>
+        <h4>@Localizer["Объявления"]</h4>
         <hr />
         <div class="row">
             <div class="col">
@@ -44,8 +44,8 @@
                     </dl>
                 </div>
                 <div>
-                    <a asp-page="./Edit" asp-route-id="@Model.Ads.AdsID">@Localizer["Edit"]</a> |
-                    <a asp-page="./Index">@Localizer["Back to List"]</a>
+                    <a asp-page="./Edit" asp-route-id="@Model.Ads.AdsID">@Localizer["Редактировать"]</a> |
+                    <a asp-page="./Index">@Localizer["Вернуться к списку"]</a>
                 </div>
             </div>
         </div>
