--- a/Pages/Departments/Create.cshtml
+++ b/Pages/Departments/Create.cshtml
@@ -12,9 +12,9 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>@Localizer["Create"]</h1>
+                <h1>@Localizer["Создать"]</h1>
 
-                <h4>@Localizer["Department"]</h4>
+                <h4>@Localizer["Отдел"]</h4>
                 <hr />
                 <div class="row">
                     <div class="col-md-4">
@@ -53,7 +53,7 @@
                 </div>
 
                 <div>
-                    <a asp-page="Index">@Localizer["Back to List"]</a>
+                    <a asp-page="Index">@Localizer["Вернуться к списку"]</a>
                 </div>
             </div>
         </div>
