--- a/Pages/Departments/Details.cshtml
+++ b/Pages/Departments/Details.cshtml
@@ -12,10 +12,10 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>@Localizer["Details"]</h1>
+                <h1>@Localizer["Подробности"]</h1>
 
                 <div>
-                    <h4>@Localizer["Department"]</h4>
+                    <h4>@Localizer["Отдел"]</h4>
                     <hr />
                     <dl class="row">
                         <dt class="col-sm-2">
@@ -51,8 +51,8 @@
                     </dl>
                 </div>
                 <div>
-                    <a asp-page="./Edit" asp-route-id="@Model.Department.DepartmentID">@Localizer["Edit"]</a> |
-                    <a asp-page="./Index">@Localizer["Back to List"]</a>
+                    <a asp-page="./Edit" asp-route-id="@Model.Department.DepartmentID">@Localizer["Редактировать"]</a> |
+                    <a asp-page="./Index">@Localizer["Вернуться к списку"]</a>
                 </div>
             </div>
         </div>
