--- a/Pages/Ads/Index.cshtml
+++ b/Pages/Ads/Index.cshtml
@@ -10,10 +10,10 @@
 
 <div class="container-fluid">
     <div class="container">
-        <h1>@Localizer["Ads"]</h1>
+        <h1>@Localizer["Объявления"]</h1>
 
         <p>
-            <a asp-page="Create">@Localizer["Create New"]</a>
+            <a asp-page="Create">@Localizer["Создать"]</a>
         </p>
         <hr />
         <div class="row">
@@ -53,9 +53,9 @@
                                     @Html.DisplayFor(modelItem => item.Department.Name)
                                 </td>
                                 <td>
-                                    <a asp-page="./Edit" asp-route-id="@item.AdsID">@Localizer["Edit"]</a> |
-                                    <a asp-page="./Details" asp-route-id="@item.AdsID">@Localizer["Details"]</a> |
-                                    <a asp-page="./Delete" asp-route-id="@item.AdsID">@Localizer["Delete"]</a>
+                                    <a asp-page="./Edit" asp-route-id="@item.AdsID">@Localizer["Редактировать"]</a> |
+                                    <a asp-page="./Details" asp-route-id="@item.AdsID">@Localizer["Подробности"]</a> |
+                                    <a asp-page="./Delete" asp-route-id="@item.AdsID">@Localizer["Удалить"]</a>
                                 </td>
                             </tr>
                         }
