--- a/Pages/Company/Delete.cshtml
+++ b/Pages/Company/Delete.cshtml
@@ -13,11 +13,11 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1>@Localizer["Delete"]</h1>
+                    <h1>@Localizer["Удалить"]</h1>
 
                     <p class="text-danger">@Model.ErrorMessage</p>
 
-                    <h3>@Localizer["Are you sure you want to delete this?"]</h3>
+                    <h3>@Localizer["Вы уверены, что хотите удалить это?"]</h3>
                     <div>
                         <h4>Company</h4>
                         <hr />
@@ -93,7 +93,7 @@
                         <form method="post">
                             <input type="hidden" asp-for="Company.ID" />
                             <input type="submit" value="Delete" class="btn btn-danger" /> |
-                            <a asp-page="./Index">@Localizer["Back to List"]</a>
+                            <a asp-page="./Index">@Localizer["Вернуться к списку"]</a>
                         </form>
                     </div>
                 </div>
