--- a/Pages/Company/Details.cshtml
+++ b/Pages/Company/Details.cshtml
@@ -15,10 +15,10 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1>@Localizer["Details"]</h1>
+                    <h1>@Localizer["Подробности"]</h1>
 
                     <div>
-                        <h4>@Localizer["Company"]</h4>
+                        <h4>@Localizer["Компании"]</h4>
                         <form class="rating-area">
                             <input type="radio" id="star-5" name="rating" value="5">
                             <label for="star-5" title="Оценка «5»"></label>
@@ -105,8 +105,8 @@
                             <dd class="col-sm-10">
                                 <table class="table">
                                     <tr>
-                                        <th>@Localizer["Course Title"]</th>
-                                        <th>@Localizer["Grade"]</th>
+                                        <th>@Localizer["Заголовок Объявления"]</th>
+                                        <th>@Localizer["Категория"]</th>
                                     </tr>
                                     @foreach (var item in Model.Company.Enrollments)
                                     {
@@ -124,16 +124,16 @@
                         </dl>
                     </div>
                     <div>
-                        <a asp-page="./Edit" asp-route-id="@Model.Company.ID">@Localizer["Edit"]</a> |
-                        <a asp-page="./Index">@Localizer["Back to List"]</a>
+                        <a asp-page="./Edit" asp-route-id="@Model.Company.ID">@Localizer["Редактировать"]</a> |
+                        <a asp-page="./Index">@Localizer["Вернуться к списку"]</a>
                     </div>
                     <div class="form-group">
                         <form>
-                            <span>Имя: </span><br>
+                            <span>@Localizer["Имя:"]</span><br>
                             <input type="text" id="name"><br>
-                            <span>Комментарий</span><br>
-                            <textarea id="comment" class="w-auto p-3" ></textarea><br>
-                            <button id="button">Отправить</button>
+                            <span>@Localizer["Комментарий:"]</span><br>
+                            <textarea id="comment" class="w-auto p-3"></textarea><br>
+                            <button id="button">@Localizer["Отправить"]</button>
                         </form>
                     </div>
                 </div>
