--- a/Pages/Company/Edit.cshtml
+++ b/Pages/Company/Edit.cshtml
@@ -13,9 +13,9 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1>@Localizer["Edit"]</h1>
+                    <h1>@Localizer["Редактировать"]</h1>
 
-                    <h4>@Localizer["Company"]</h4>
+                    <h4>@Localizer["Компанию"]</h4>
                     <hr />
                     <div class="row">
                         <div class="col-md-4">
@@ -85,7 +85,7 @@
                     </div>
 
                     <div>
-                        <a asp-page="./Index">@Localizer["Back to List"]</a>
+                        <a asp-page="./Index">@Localizer["Вернуться к списку"]</a>
                     </div>
                 </div>
             </div>
