--- a/Pages/Departments/Delete.cshtml
+++ b/Pages/Departments/Delete.cshtml
@@ -12,13 +12,13 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>@Localizer["Delete"]</h1>
+                <h1>@Localizer["Удалить"]</h1>
 
                 <p class="text-danger">@Model.ConcurrencyErrorMessage</p>
 
-                <h3>@Localizer["Are you sure you want to delete this?"]</h3>
+                <h3>@Localizer["Вы уверены, что хотите удалить это?"]</h3>
                 <div>
-                    <h4>@Localizer["Department"]</h4>
+                    <h4>@Localizer["Отдел"]</h4>
                     <hr />
                     <dl class="dl-horizontal">
                         <dt>
@@ -58,7 +58,7 @@
                         <input type="hidden" asp-for="Department.RowVersion" />
                         <div class="form-actions no-color">
                             <input type="submit" value="Delete" class="btn btn-danger" /> |
-                            <a asp-page="./Index">@Localizer["Back to List"]</a>
+                            <a asp-page="./Index">@Localizer["Вернуться к списку"]</a>
                         </div>
                     </form>
                 </div>
