--- a/Pages/Departments/Index.cshtml
+++ b/Pages/Departments/Index.cshtml
@@ -12,10 +12,10 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>@Localizer["Departments"]</h1>
+                <h1>@Localizer["Отделы"]</h1>
 
                 <p>
-                    <a asp-page="Create">@Localizer["Create New"]</a>
+                    <a asp-page="Create">@Localizer["Создать"]</a>
                 </p>
                 <table class="table">
                     <thead>
@@ -58,9 +58,9 @@
                                     @item.RowVersion[7]
                                 </td>
                                 <td>
-                                    <a asp-page="./Edit" asp-route-id="@item.DepartmentID">@Localizer["Edit"]</a> |
-                                    <a asp-page="./Details" asp-route-id="@item.DepartmentID">@Localizer["Details"]</a> |
-                                    <a asp-page="./Delete" asp-route-id="@item.DepartmentID">@Localizer["Delete"]</a>
+                                    <a asp-page="./Edit" asp-route-id="@item.DepartmentID">@Localizer["Редактировать"]</a> |
+                                    <a asp-page="./Details" asp-route-id="@item.DepartmentID">@Localizer["Подробности"]</a> |
+                                    <a asp-page="./Delete" asp-route-id="@item.DepartmentID">@Localizer["Удалить"]</a>
                                 </td>
                             </tr>
                         }
