--- a/Pages/User/Create.cshtml
+++ b/Pages/User/Create.cshtml
@@ -12,9 +12,9 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h2>@Localizer["Create"]</h2>
+                <h2>@Localizer["Создать"]</h2>
 
-                <h4>@Localizer["User"]</h4>
+                <h4>@Localizer["Пользователя"]</h4>
                 <hr />
                 <div class="row">
                     <div class="col-md-4">
@@ -34,6 +34,31 @@
                                 <label asp-for="Instructor.HireDate" class="control-label"></label>
                                 <input asp-for="Instructor.HireDate" class="form-control" />
                                 <span asp-validation-for="Instructor.HireDate" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Instructor.Age" class="control-label"></label>
+                                <input asp-for="Instructor.Age" class="form-control" />
+                                <span asp-validation-for="Instructor.Age" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Instructor.Country" class="control-label"></label>
+                                <input asp-for="Instructor.Country" class="form-control" />
+                                <span asp-validation-for="Instructor.Country" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Instructor.City" class="control-label"></label>
+                                <input asp-for="Instructor.City" class="form-control" />
+                                <span asp-validation-for="Instructor.City" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Instructor.Email" class="control-label"></label>
+                                <input asp-for="Instructor.Email" class="form-control" />
+                                <span asp-validation-for="Instructor.Email" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Instructor.AboutMe" class="control-label"></label>
+                                <input asp-for="Instructor.AboutMe" class="form-control" />
+                                <span asp-validation-for="Instructor.AboutMe" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="Instructor.OfficeAssignment.Location" class="control-label"></label>
@@ -74,7 +99,7 @@
                     </div>
 
                     <div>
-                        <a asp-page="Index">@Localizer["Back to List"]</a>
+                        <a asp-page="Index">@Localizer["Вернуться к списку"]</a>
                     </div>
                 </div>
         </div>
