--- a/Pages/User/Delete.cshtml
+++ b/Pages/User/Delete.cshtml
@@ -12,11 +12,11 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>@Localizer["Delete"]</h1>
+                <h1>@Localizer["Удалить"]</h1>
 
-                <h3>@Localizer["Are you sure you want to delete this?"]</h3>
+                <h3>@Localizer["Вы уверены, что хотите удалить это?"]</h3>
                 <div>
-                    <h4>@Localizer["User"]</h4>
+                    <h4>@Localizer["Пользователь"]</h4>
                     <hr />
                     <dl class="row">
                         <dt class="col-sm-2">
@@ -67,18 +67,12 @@
                         <dd class="col-sm-10">
                             @Html.DisplayFor(model => model.Instructors.AboutMe)
                         </dd>
-                        <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.Instructors.Comments)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.Instructors.Comments)
-                        </dd>
                     </dl>
 
                     <form method="post">
                         <input type="hidden" asp-for="Instructors.ID" />
                         <input type="submit" value="Delete" class="btn btn-danger" /> |
-                        <a asp-page="./Index">@Localizer["Back to List"]</a>
+                        <a asp-page="./Index">@Localizer["Вернуться к списку"]</a>
                     </form>
                 </div>
             </div>
