--- a/Pages/User/Details.cshtml
+++ b/Pages/User/Details.cshtml
@@ -12,10 +12,10 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>@Localizer["Details"]</h1>
+                <h1>@Localizer["Подробности"]</h1>
 
                 <div>
-                    <h4>@Localizer["User"]</h4>
+                    <h4>@Localizer["Пользователь"]</h4>
                     <hr />
                     <dl class="row">
                         <dt class="col-sm-2">
@@ -66,17 +66,11 @@
                         <dd class="col-sm-10">
                             @Html.DisplayFor(model => model.Instructors.AboutMe)
                         </dd>
-                        <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.Instructors.Comments)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.Instructors.Comments)
-                        </dd>
                     </dl>
                 </div>
                 <div>
-                    <a asp-page="./Edit" asp-route-id="@Model.Instructors.ID">@Localizer["Edit"]</a> |
-                    <a asp-page="./Index">@Localizer["Back to List"]</a>
+                    <a asp-page="./Edit" asp-route-id="@Model.Instructors.ID">@Localizer["Редактировать"]</a> |
+                    <a asp-page="./Index">@Localizer["Вернуться к списку"]</a>
                 </div>
             </div>
         </div>
