--- a/Pages/User/Index.cshtml
+++ b/Pages/User/Index.cshtml
@@ -11,10 +11,10 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>@Localizer["User"]</h1>
+                <h1>@Localizer["Пользователи"]</h1>
 
                 <p>
-                    <a asp-page="Create">@Localizer["Create New"]</a>
+                    <a asp-page="Create">@Localizer["Создать"]</a>
                 </p>
                 <table class="table">
                     <thead>
@@ -22,8 +22,11 @@
                             <th>Last Name</th>
                             <th>First Name</th>
                             <th>Hire Date</th>
-                            <th>Office</th>
-                            <th>Courses</th>
+                            <th>Age</th>
+                            <th>Country</th>
+                            <th>City</th>
+                            <th>Email</th>
+                            <th>AboutMe</th>
                             <th></th>
                         </tr>
                     </thead>
@@ -61,9 +64,6 @@
                                     @Html.DisplayFor(modelItem => item.AboutMe)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Comments)
-                                </td>
-                                <td>
                                     @if (item.OfficeAssignment != null)
                                     {
                                         @item.OfficeAssignment.Location
@@ -78,10 +78,10 @@
                                     }
                                 </td>
                                 <td>
-                                    <a asp-page="./Index" asp-route-id="@item.ID">@Localizer["Select"]</a>
-                                    <a asp-page="./Edit" asp-route-id="@item.ID">@Localizer["Edit"]</a> |
-                                    <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Details"]</a> |
-                                    <a asp-page="./Delete" asp-route-id="@item.ID">@Localizer["Delete"]</a>
+                                    <a asp-page="./Index" asp-route-id="@item.ID">@Localizer["Выбрать"]</a>
+                                    <a asp-page="./Edit" asp-route-id="@item.ID">@Localizer["Редактировать"]</a> |
+                                    <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Подробности"]</a> |
+                                    <a asp-page="./Delete" asp-route-id="@item.ID">@Localizer["Удалить"]</a>
                                 </td>
                             </tr>
                         }
