--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -13,15 +13,15 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 
-<h2>@Localizer["Company Body Statistics"]</h2>
+<h2>@Localizer["Статистика Компании"]</h2>
 
 <table>
     <tr>
         <th>
-            @Localizer["Enrollment Date"]
+            @Localizer["Дата Регистрации"]
         </th>
         <th>
-            @Localizer["Company"]
+            @Localizer["Компания"]
         </th>
     </tr>
 
