--- a/Pages/Company/Create.cshtml
+++ b/Pages/Company/Create.cshtml
@@ -49,10 +49,10 @@
                                     <span asp-validation-for="Company.Description" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    @*<label asp-for="Company.Images" class="control-label"></label>
+                                    <label asp-for="Company.Images" class="control-label"></label>
                                     <input asp-for="Company.Images" class="form-control" />
-                                    <span asp-validation-for="Company.Images" class="text-danger"></span>*@
-                                    <div id="drop-area">
+                                    <span asp-validation-for="Company.Images" class="text-danger"></span>
+                                    @*<div id="drop-area">
                                         <div class="my-form">
                                             <label asp-for="Company.Images" class="control-label"></label>
                                             <p>@Localizer["Загрузите изображения с помощью диалога выбора файлов или перетащив нужные изображения в выделенную область"]</p>
@@ -60,7 +60,7 @@
                                             <span asp-validation-for="Company.Images" class="text-danger"></span>
                                             <label class="button" for="UploadFileSample.cs">Выбрать изображения</label>
                                         </div>
-                                    </div>
+                                    </div>*@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="Company.Video" class="control-label"></label>
