--- a/Pages/Company/Index.cshtml
+++ b/Pages/Company/Index.cshtml
@@ -70,7 +70,7 @@
                                     <td>
                                         <a asp-page="./Edit" asp-route-id="@item.ID">@Localizer["Редактировать"]</a> |
                                         <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Подробности"]</a> |
-                                        <a asp-page="./Delete" asp-route-id="@item.ID">@Localizer["v"]</a>
+                                        <a asp-page="./Delete" asp-route-id="@item.ID">@Localizer["Удалить"]</a>
                                     </td>
                                 </tr>
                             }
