--- a/Pages/User/Delete.cshtml
+++ b/Pages/User/Delete.cshtml
@@ -1,81 +1,76 @@
 ﻿@page
 @model MyWebSite.Pages.User.DeleteModel
 
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
-
 @{
     ViewData["Title"] = "Delete";
 }
 
-<div class="container-fluid">
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1>@Localizer["Удалить"]</h1>
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
 
-                <h3>@Localizer["Вы уверены, что хотите удалить это?"]</h3>
-                <div>
-                    <h4>@Localizer["Пользователь"]</h4>
-                    <hr />
-                    <dl class="row">
-                        <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.Instructors.LastName)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.Instructors.LastName)
-                        </dd>
-                        <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.Instructors.FirstMidName)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.Instructors.FirstMidName)
-                        </dd>
-                        <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.Instructors.HireDate)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.Instructors.HireDate)
-                        </dd>
-                        <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.Instructors.Age)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.Instructors.Age)
-                        </dd>
-                        <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.Instructors.Country)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.Instructors.Country)
-                        </dd>
-                        <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.Instructors.City)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.Instructors.City)
-                        </dd>
-                        <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.Instructors.Email)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.Instructors.Email)
-                        </dd>
-                        <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.Instructors.AboutMe)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.Instructors.AboutMe)
-                        </dd>
-                    </dl>
+<h1>@Localizer["Удалить"]</h1>
 
-                    <form method="post">
-                        <input type="hidden" asp-for="Instructors.ID" />
-                        <input type="submit" value="Delete" class="btn btn-danger" /> |
-                        <a asp-page="./Index">@Localizer["Вернуться к списку"]</a>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+<h3>@Localizer["Вы уверены, что хотите удалить это?"]</h3>
+<div>
+    <h4>@Localizer["Пользователь"]</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Instructors.LastName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Instructors.LastName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Instructors.FirstMidName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Instructors.FirstMidName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Instructors.HireDate)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Instructors.HireDate)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Instructors.Age)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Instructors.Age)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Instructors.Country)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Instructors.Country)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Instructors.City)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Instructors.City)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Instructors.Email)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Instructors.Email)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Instructors.AboutMe)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Instructors.AboutMe)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Instructors.Comments)
+        </dt>
+    </dl>
+
+    <form method="post">
+        <input type="hidden" asp-for="Instructors.ID" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-page="./Index">@Localizer["Вернуться к списку"]</a>
+    </form>
 </div>
