--- a/Pages/User/Index.cshtml
+++ b/Pages/User/Index.cshtml
@@ -1,152 +1,147 @@
 ﻿@page "{id:int?}"
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
-
 @model MyWebSite.Pages.User.IndexModel
+
 @{
     ViewData["Title"] = "User";
 }
 
-<div class="container-fluid">
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1>@Localizer["Пользователи"]</h1>
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
 
-                <p>
-                    <a asp-page="Create">@Localizer["Создать"]</a>
-                </p>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Last Name</th>
-                            <th>First Name</th>
-                            <th>Hire Date</th>
-                            <th>Age</th>
-                            <th>Country</th>
-                            <th>City</th>
-                            <th>Email</th>
-                            <th>AboutMe</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.InstructorData.Instructors)
+<h1>@Localizer["Пользователи"]</h1>
+
+<p>
+    <a asp-page="Create">@Localizer["Создать"]</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Last Name</th>
+            <th>First Name</th>
+            <th>Hire Date</th>
+            <th>Ags</th>
+            <th>Country</th>
+            <th>City</th>
+            <th>Email</th>
+            <th>About Me</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.InstructorData.Instructors)
+        {
+            string selectedRow = "";
+            if (item.ID == Model.InstructorID)
+            {
+                selectedRow = "table-success";
+            }
+            <tr class="@selectedRow">
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstMidName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HireDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Age)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Country)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.City)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AboutMe)
+                </td>
+                <td>
+                    @if (item.OfficeAssignment != null)
+                    {
+                        @item.OfficeAssignment.Location
+                    }
+                </td>
+                <td>
+                    @{
+                        foreach (var ads in item.AdsAssignments)
                         {
-                            string selectedRow = "";
-                            if (item.ID == Model.InstructorID)
-                            {
-                                selectedRow = "table-success";
-                            }
-                            <tr class="@selectedRow">
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.LastName)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.FirstMidName)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.HireDate)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Age)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Country)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.City)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Email)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.AboutMe)
-                                </td>
-                                <td>
-                                    @if (item.OfficeAssignment != null)
-                                    {
-                                        @item.OfficeAssignment.Location
-                                    }
-                                </td>
-                                <td>
-                                    @{
-                                        foreach (var ads in item.AdsAssignments)
-                                        {
-                                            @ads.Ads.AdsID @:  @ads.Ads.Title <br />
-                                        }
-                                    }
-                                </td>
-                                <td>
-                                    <a asp-page="./Index" asp-route-id="@item.ID">@Localizer["Выбрать"]</a>
-                                    <a asp-page="./Edit" asp-route-id="@item.ID">@Localizer["Редактировать"]</a> |
-                                    <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Подробности"]</a> |
-                                    <a asp-page="./Delete" asp-route-id="@item.ID">@Localizer["Удалить"]</a>
-                                </td>
-                            </tr>
+                            @ads.Ads.AdsID @:  @ads.Ads.Title <br />
                         }
-                    </tbody>
-                </table>
+                    }
+                </td>
+                <td>
+                    <a asp-page="./Index" asp-route-id="@item.ID">@Localizer["Выбрать"]</a> |
+                    <a asp-page="./Edit" asp-route-id="@item.ID">@Localizer["Редактировать"]</a> |
+                    <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Подробности"]</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.ID">@Localizer["Удалить"]</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
 
-                @if (Model.InstructorData.Ads != null)
-                {
-                    <h3>@Localizer["Компания создана выбранным пользователем"]</h3>
-                    <table class="table">
-                        <tr>
-                            <th></th>
-                            <th>Number</th>
-                            <th>Title</th>
-                            <th>Department</th>
-                        </tr>
+@if (Model.InstructorData.Ads != null)
+{
+<h3>@Localizer["Компания создана выбранным пользователем"]</h3>
+    <table class="table">
+        <tr>
+            <th></th>
+            <th>Number</th>
+            <th>Title</th>
+            <th>Department</th>
+        </tr>
 
-                        @foreach (var item in Model.InstructorData.Ads)
-                        {
-                            string selectedRow = "";
-                            if (item.AdsID == Model.AdsID)
-                            {
-                                selectedRow = "table-success";
-                            }
-                            <tr class="@selectedRow">
-                                <td>
-                                    <a asp-page="./Index" asp-route-courseID="@item.AdsID">@Localizer["Выбрать"]</a>
-                                </td>
-                                <td>
-                                    @item.AdsID
-                                </td>
-                                <td>
-                                    @item.Title
-                                </td>
-                                <td>
-                                    @item.Department.Name
-                                </td>
-                            </tr>
-                        }
+        @foreach (var item in Model.InstructorData.Ads)
+        {
+            string selectedRow = "";
+            if (item.AdsID == Model.AdsID)
+            {
+                selectedRow = "table-success";
+            }
+            <tr class="@selectedRow">
+                <td>
+                    <a asp-page="./Index" asp-route-courseID="@item.AdsID">@Localizer["Выбрать"]</a>
+                </td>
+                <td>
+                    @item.AdsID
+                </td>
+                <td>
+                    @item.Title
+                </td>
+                <td>
+                    @item.Department.Name
+                </td>
+            </tr>
+        }
 
-                    </table>
-                }
+    </table>
+}
 
-                @if (Model.InstructorData.Enrollments != null)
-                {
-                    <h3>@Localizer["Компания зарегистрирована в выбранных объявлениях"]</h3>
-                    <table class="table">
-                        <tr>
-                            <th>Name</th>
-                            <th>Grade</th>
-                        </tr>
-                        @foreach (var item in Model.InstructorData.Enrollments)
-                        {
-                            <tr>
-                                <td>
-                                    @item.Company.FullName
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Grade)
-                                </td>
-                            </tr>
-                        }
-                    </table>
-                }
-            </div>
-        </div>
-    </div>
-</div>
+@if (Model.InstructorData.Enrollments != null)
+{
+<h3>
+    @Localizer["Компания зарегистрирована в выбранных объявлениях"]
+</h3>
+    <table class="table">
+        <tr>
+            <th>Name</th>
+            <th>Grade</th>
+        </tr>
+        @foreach (var item in Model.InstructorData.Enrollments)
+        {
+            <tr>
+                <td>
+                    @item.Company.FullName
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Grade)
+                </td>
+            </tr>
+        }
+    </table>
+}
